--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -14,6 +14,11 @@
         <asp:ContentPlaceHolder ID="bodyContentPlaceHolder" runat="server">
         
         </asp:ContentPlaceHolder>
+        <footer>
+            <a href="http://validator.w3.org/check?uri=referer">Validate HTML</a>
+            <a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
+            <a href="http://achecker.ca/checker/?uri=referer">Check WCAG</a>
+        </footer>
     </div>
     </form>
 </body>
