--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -10,16 +10,20 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder ID="bodyContentPlaceHolder" runat="server">
-        
-        </asp:ContentPlaceHolder>
-        <footer>
-            <a href="http://validator.w3.org/check?uri=referer">Validate HTML</a>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">Validate CSS</a>
-            <a href="http://achecker.ca/checker/?uri=referer">Check WCAG</a>
-        </footer>
-    </div>
+        <div>
+            <asp:ContentPlaceHolder ID="bodyContentPlaceHolder" runat="server">
+            </asp:ContentPlaceHolder>
+            <footer>
+                <nav class="validation">
+                    <p>Validate:</p>
+                    <ul>
+                        <li><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validator">HTML</a></li>
+                        <li><a href="http://jigsaw.w3.org/css-validator/check/referer" title="W3C CSS Validator">CSS</a></li>
+                        <li><a href="http://achecker.ca/checker/?uri=referer" title="AChecker Web Accessibility Checker">WCAG</a></li>
+                    </ul>
+                </nav>
+            </footer>
+        </div>
     </form>
 </body>
 </html>
