--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -11,6 +11,19 @@
 <body>
     <form id="form1" runat="server">
         <div>
+            <header>
+                <div class="logo">
+                    <img alt="StunningSnaps logo - [more description here]" src="~/Images/Logo.png" width="80" height="80" runat="server"/>
+                    <h1>StunningSnaps</h1>
+                </div>
+                <nav class="main">
+                    <ul>
+                        <li><a href="~/#" runat="server">Browse</a></li>
+                        <li><a href="~/#" runat="server">Checkout</a></li>
+                        <li><a href="~/#" runat="server">Login</a></li>
+                    </ul>
+                </nav>
+            </header>
             <asp:ContentPlaceHolder ID="bodyContentPlaceHolder" runat="server">
             </asp:ContentPlaceHolder>
             <footer>
