--- a/CO5027/Styles/MainStyle.css
+++ b/CO5027/Styles/MainStyle.css
@@ -1,4 +1,155 @@
-﻿* {
+﻿@import url(https://fonts.googleapis.com/css?family=Roboto);
+* {
   margin: 0;
   padding: 0;
+}
+body {
+  font-family: 'Roboto', Helvetica, Airel, sans-serif;
+}
+a {
+  color: #08f;
+  text-decoration: none;
+}
+a:hover {
+  text-decoration: underline;
+}
+a.current {
+  background-color: #333;
+}
+p {
+  margin-bottom: 5px;
+}
+h1 {
+  margin-top: 10px;
+}
+h2 {
+  margin-top: 5px;
+}
+header {
+  background-color: #222;
+  color: #fff;
+  font-family: 'Roboto', Helvetica, Airel, sans-serif;
+}
+header a {
+  color: #fff;
+  text-decoration: none;
+}
+header a img {
+  vertical-align: middle;
+}
+header a h1 {
+  vertical-align: middle;
+  color: #fff;
+  display: inline;
+  padding-top: 15px;
+}
+header nav.main ul {
+  display: inline-block;
+  width: 100%;
+}
+header nav.main ul li {
+  list-style: none;
+}
+header nav.main ul li a {
+  display: block;
+  padding: 10px 15px;
+}
+header nav.main ul li a:hover {
+  text-decoration: none;
+  background-color: #333;
+}
+section a.item {
+  display: inline-block;
+  margin: 5px;
+}
+section a.item figure {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+section a.item figure img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+section a.item figure figcaption {
+  position: absolute;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75));
+  /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75));
+  /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75));
+  /* For Firefox 3.6 to 15 */
+  background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75));
+  color: white;
+  padding: 10px 20px;
+  opacity: 0;
+  bottom: 0;
+  left: -30%;
+}
+section a.item figure:hover figcaption {
+  opacity: 1;
+  left: 0;
+}
+section a.item small {
+  text-align: right;
+}
+footer {
+  background-color: #222;
+  color: #fff;
+  font-family: 'Roboto', Helvetica, Airel, sans-serif;
+  width: 100%;
+}
+footer a {
+  color: #fff;
+  text-decoration: none;
+}
+footer .copyright {
+  text-align: center;
+  padding: 15px;
+}
+footer nav.validation {
+  text-align: center;
+  padding: 15px;
+  background-color: #2f2f2f;
+}
+footer nav.validation h3 {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-size: 90%;
+}
+footer nav.validation li {
+  list-style: none;
+  display: inline-block;
+}
+footer nav.validation li a {
+  display: block;
+  padding: 8px 14px;
+  border-radius: 3px;
+}
+footer nav.validation li a:hover {
+  text-decoration: none;
+  background-color: #3c3c3c;
+}
+@media (max-width: 320px) {
+  header nav.main ul li:first-of-type a {
+    margin-top: 10px;
+  }
+  header nav.main ul li:last-of-type a {
+    margin-bottom: 10px;
+  }
+}
+@media (min-width: 320px) {
+  header nav.main ul {
+    text-align: center;
+  }
+  header nav.main ul li {
+    display: inline-block;
+  }
+  header nav.main ul li a {
+    display: block;
+    padding: 12px 20px;
+  }
 }
