--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -30,9 +30,11 @@
             </asp:ContentPlaceHolder>
 
             <footer>
-                <small>&copy; 2015: StunningSnaps</small>
+                <div class="copyright">
+                    <small>&copy; 2015: StunningSnaps</small>
+                </div>
                 <nav class="validation">
-                    <p>Validate:</p>
+                    <h3>Validate:</h3>
                     <ul>
                         <li><a href="http://validator.w3.org/check?uri=referer" title="W3C HTML Validator">HTML</a></li>
                         <li><a href="http://jigsaw.w3.org/css-validator/check/referer" title="W3C CSS Validator">CSS</a></li>
