Changed: <div> wrapping logo and site title into <a> linking to homepage

--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -13,10 +13,10 @@
     <form id="form1" runat="server">
         <div>
             <header>
-                <div class="logo">
+                <a class="logo" href="~/#" runat="server">
                     <img alt="StunningSnaps logo - [more description here]" src="~/Images/Logo.png" width="80" height="80" runat="server" />
                     <h1>StunningSnaps</h1>
-                </div>
+                </a>
                 <nav class="main">
                     <ul>
                         <li><a href="~/#" runat="server">Browse</a></li>
