--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -27,6 +27,12 @@
     background: linear-gradient(@colorTop, @colorBottom);
 }
 
+.columnCount(@noOfColumns) {
+    -moz-column-count: @noOfColumns;
+    -webkit-column-count: @noOfColumns;
+    column-count: @noOfColumns;
+}
+
 
 // Reset
 * {
@@ -40,32 +46,32 @@
 // Defaults
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 body {
-  font-family: @fontFamily;
+    font-family: @fontFamily;
 }
 
 a {
-  color: @linkColor;
-  text-decoration: none;
+    color: @linkColor;
+    text-decoration: none;
 
-  &:hover {
-    text-decoration: underline;
-  }
+    &:hover {
+        text-decoration: underline;
+    }
 
-  &.current {
-    background-color: #333;
-  }
+    &.current {
+        background-color: #333;
+    }
 }
 
 p {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
 
 h1 {
-  margin-top: 10px;
+    margin-top: 10px;
 }
 
 h2 {
-  margin-top: 5px;
+    margin-top: 5px;
 }
 
 
@@ -74,48 +80,45 @@ h2 {
 // Header
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 header {
-  background-color: @headerBackgroundColor;
-  color: @headerFontColor;
-  font-family: @headerFontFamily;
+    background-color: @headerBackgroundColor;
+    color: @headerFontColor;
+    font-family: @headerFontFamily;
 
-  a {
-    color: @headerLinkColor;
-    text-decoration: none;
+    a {
+        color: @headerLinkColor;
+        text-decoration: none;
 
-    img{
-      vertical-align: middle;
-      }
-
-    h1 {
-      vertical-align: middle;
-      color: @logoFontColor;
-      display: inline;
-      padding-top: 15px;
-    }
-  }
-
-
-  // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  // Main Nav
-
-  nav.main ul {
-    display: inline-block;
-    width: 100%;
-
-    li {
-      list-style: none;
-
-      a {
-        display: block;
-        padding: 10px 15px;
-
-        &:hover {
-          text-decoration: none;
-          background-color: #333;
+        img {
+            vertical-align: middle;
         }
-      }
+
+        h1 {
+            vertical-align: middle;
+            color: @logoFontColor;
+            display: inline;
+            padding-top: 15px;
+        }
     }
-  }
+    // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    // Main Nav
+    nav.main ul {
+        display: inline-block;
+        width: 100%;
+
+        li {
+            list-style: none;
+
+            a {
+                display: block;
+                padding: 10px 15px;
+
+                &:hover {
+                    text-decoration: none;
+                    background-color: #333;
+                }
+            }
+        }
+    }
 }
 
 
@@ -123,98 +126,93 @@ header {
 // Body
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-section a.item {
-  display: inline-block;
-  margin: 5px;
+section.photos a.item {
+    display: inline-block;
+    margin: 5px;
 
-  figure {
-    display: block;
-    position: relative;
-    overflow: hidden;
+    figure {
+        display: block;
+        position: relative;
+        overflow: hidden;
 
-    img {
-      display: block;
-      max-width: 100%;
-      height: auto;
+        img {
+            display: block;
+            width: 100%;
+            height: auto;
+        }
+
+        figcaption {
+            position: absolute;
+            width: 100%;
+            .backgroundGradient(rgba(0,0,0,0),rgba(0,0,0,0.75));
+            color: white;
+            padding: 10px 20px;
+            opacity: 0;
+            bottom: 0;
+            left: -30%;
+        }
+
+        &:hover figcaption {
+            opacity: 1;
+            left: 0;
+        }
     }
 
-    figcaption {
-      position: absolute;
-      width:100%;
-      .backgroundGradient(rgba(0,0,0,0),rgba(0,0,0,0.75));
-      color: white;
-      padding: 10px 20px;
-
-      opacity: 0;
-      bottom: 0;
-      left: -30%;
+    small {
+        text-align: right;
     }
 
-    &:hover figcaption {
-      opacity: 1;
-      left: 0;
+    p {
     }
-  }
-
-  small {
-    text-align: right;
-  }
-
-  p {
-
-  }
 }
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Footer
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 footer {
-  background-color: @footerBackgroundColor;
-  color: @footerFontColor;
-  font-family: @footerFontFamily;
-  width:100%;
+    background-color: @footerBackgroundColor;
+    color: @footerFontColor;
+    font-family: @footerFontFamily;
+    width: 100%;
 
-  a {
-    color: @footerLinkColor;
-    text-decoration: none;
-  }
-
-  .copyright {
-    text-align: center;
-    padding: 15px;
-  }
-
-
-  // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-  // Validation Nav
-
-  nav.validation {
-    text-align: center;
-    padding: 15px;
-    background-color: lighten(@footerBackgroundColor, 5%);
-
-    h3 {
-      padding-top:5px;
-      padding-bottom: 5px;
-      font-size: 90%;
+    a {
+        color: @footerLinkColor;
+        text-decoration: none;
     }
 
-    li {
-      list-style: none;
-      display: inline-block;
+    .copyright {
+        text-align: center;
+        padding: 15px;
+    }
+    // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+    // Validation Nav
+    nav.validation {
+        text-align: center;
+        padding: 15px;
+        background-color: lighten(@footerBackgroundColor, 5%);
 
-      a {
-        display: block;
-        padding: 8px 14px;
-        border-radius: 3px;
-
-        &:hover {
-          text-decoration: none;
-          background-color: @footerLinkHoverColor;
+        h3 {
+            padding-top: 5px;
+            padding-bottom: 5px;
+            font-size: 90%;
         }
-      }
+
+        li {
+            list-style: none;
+            display: inline-block;
+
+            a {
+                display: block;
+                padding: 8px 14px;
+                border-radius: 3px;
+
+                &:hover {
+                    text-decoration: none;
+                    background-color: @footerLinkHoverColor;
+                }
+            }
+        }
     }
-  }
 }
 
 
@@ -226,30 +224,61 @@ footer {
 
 // add margin above and below vertical navigation menu for stmall screen sizes
 @media (max-width: 320px) {
-  header nav.main ul li {
-    &:first-of-type a {
-      margin-top: 10px;
-    }
+    header nav.main ul li {
+        &:first-of-type a {
+            margin-top: 10px;
+        }
 
-    &:last-of-type a {
-      margin-bottom: 10px;
+        &:last-of-type a {
+            margin-bottom: 10px;
+        }
     }
-  }
 }
 
 @media (min-width: 320px) {
 
-  header nav.main ul {
-    text-align: center;
+    header nav.main ul {
+        text-align: center;
 
-    li {
-      display: inline-block;
+        li {
+            display: inline-block;
 
-      a {
-        display: block;
-        padding: 12px 20px;
-      }
+            a {
+                display: block;
+                padding: 12px 20px;
+            }
+        }
     }
-  }
+}
 
+@media (min-width: 430px) {
+    section.photos {
+        line-height: 0;
+        -webkit-column-gap: 0px;
+        -moz-column-gap: 0px;
+        .columnCount(2);
+        column-gap: 0px;
+    }
+}
+
+@media (min-width: 610px) {
+    header nav.main {
+        display: inline-block;
+
+        ul {
+            text-align: right;
+        }
+    }
+}
+
+@media (min-width: 700px) {
+    section.photos {
+        .columnCount(3);
+    }
+}
+
+@media (min-width: 900px) {
+    section.photos {
+        .columnCount(4);
+    }
 }
