--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -261,6 +261,23 @@ footer {
     }
 }
 
+@media (min-width: 500px) {
+    footer {
+        
+        .copyright {
+            display: inline-block;
+        }
+
+        nav.validation {
+            display: inline-block;
+
+            h3, ul {
+                display: inline-block;
+            }
+        }
+    }
+}
+
 @media (min-width: 610px) {
     header nav.main {
         display: inline-block;
@@ -271,7 +288,7 @@ footer {
     }
 }
 
-@media (min-width: 700px) {
+@media (min-width: 650px) {
     section.photos {
         .columnCount(3);
     }
