--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>StunningSnaps</title>
-    <link href="Styles/MainStyle.min.css" rel="stylesheet">
+    <link href="Styles/MainStyle.min.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="headerContentPlaceHolder" runat="server">
     </asp:ContentPlaceHolder>
 </head>
