Added: Contact page

--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -20,9 +20,10 @@
                 </a>
                 <nav class="main">
                     <ul>
-                        <li><a href="~/#" runat="server">Browse</a></li>
+                        <li><a href="~/" runat="server">Browse</a></li>
                         <li><a href="~/#" runat="server">Checkout</a></li>
                         <li><a href="~/#" runat="server">Login</a></li>
+                        <li><a href="~/contact.aspx" runat="server">Contact</a></li>
                     </ul>
                 </nav>
             </header>
