--- a/CO5027/Styles/MainStyle.css
+++ b/CO5027/Styles/MainStyle.css
@@ -58,21 +58,28 @@ header nav.main ul li a:hover {
   text-decoration: none;
   background-color: #333;
 }
-section.photos .item {
-  display: inline-block;
-  margin: 5px;
+.photos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
-section.photos .item figure {
+.photos .item {
+  margin: 5px;
+  flex-grow: 1;
+  flex-basis: 320px;
+}
+.photos .item figure {
+  display: flex;
   display: block;
   position: relative;
   overflow: hidden;
 }
-section.photos .item figure img {
+.photos .item figure img {
   display: block;
   width: 100%;
   height: auto;
 }
-section.photos .item figure figcaption {
+.photos .item figure figcaption {
   position: absolute;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.75);
@@ -88,12 +95,13 @@ section.photos .item figure figcaption {
   opacity: 0;
   bottom: 0;
 }
-section.photos .item figure:hover figcaption {
+.photos .item figure figcaption span {
+  padding-right: 32px;
+  float: right;
+}
+.photos .item figure:hover figcaption {
   opacity: 1;
   left: 0;
-}
-section.photos .item small {
-  text-align: right;
 }
 footer {
   background-color: #222;
@@ -153,14 +161,10 @@ footer nav.validation li a:hover {
   }
 }
 @media (min-width: 430px) {
-  section.photos {
-    line-height: 0;
-    -webkit-column-gap: 0px;
-    -moz-column-gap: 0px;
-    -moz-column-count: 2;
-    -webkit-column-count: 2;
-    column-count: 2;
-    column-gap: 0px;
+  .photos {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
 @media (min-width: 500px) {
@@ -186,19 +190,5 @@ footer nav.validation li a:hover {
   }
   header nav.main ul {
     text-align: right;
-  }
-}
-@media (min-width: 650px) {
-  section.photos {
-    -moz-column-count: 3;
-    -webkit-column-count: 3;
-    column-count: 3;
-  }
-}
-@media (min-width: 900px) {
-  section.photos {
-    -moz-column-count: 4;
-    -webkit-column-count: 4;
-    column-count: 4;
   }
 }
