--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -125,43 +125,49 @@ header {
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Body
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+.photos {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
-section.photos .item {
-    display: inline-block;
-    margin: 5px;
+    .item {
+        margin: 5px;
+        flex-grow: 1;
+        //flex-shrink: 0;
+        flex-basis: 320px;
 
-    figure {
-        display: block;
-        position: relative;
-        overflow: hidden;
-
-        img {
+        figure {
+            display: flex;
             display: block;
-            width: 100%;
-            height: auto;
+            position: relative;
+            overflow: hidden;
+
+            img {
+                display: block;
+                width: 100%;
+                height: auto;
+            }
+
+            figcaption {
+                position: absolute;
+                width: 100%;
+                .backgroundGradient(rgba(0,0,0,0),rgba(0,0,0,0.75));
+                color: white;
+                padding: 10px 20px;
+                opacity: 0;
+                bottom: 0;
+
+                span {
+                    padding-right: 32px;
+                    float: right;
+                }
+            }
+
+            &:hover figcaption {
+                opacity: 1;
+                left: 0;
+            }
         }
-
-        figcaption {
-            position: absolute;
-            width: 100%;
-            .backgroundGradient(rgba(0,0,0,0),rgba(0,0,0,0.75));
-            color: white;
-            padding: 10px 20px;
-            opacity: 0;
-            bottom: 0;
-        }
-
-        &:hover figcaption {
-            opacity: 1;
-            left: 0;
-        }
-    }
-
-    small {
-        text-align: right;
-    }
-
-    p {
     }
 }
 
@@ -251,12 +257,10 @@ footer {
 }
 
 @media (min-width: 430px) {
-    section.photos {
-        line-height: 0;
-        -webkit-column-gap: 0px;
-        -moz-column-gap: 0px;
-        .columnCount(2);
-        column-gap: 0px;
+    .photos {
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
 }
 
@@ -288,17 +292,5 @@ footer {
         ul {
             text-align: right;
         }
-    }
-}
-
-@media (min-width: 650px) {
-    section.photos {
-        .columnCount(3);
-    }
-}
-
-@media (min-width: 900px) {
-    section.photos {
-        .columnCount(4);
     }
 }
