--- a/CO5027/Styles/MainStyle.css
+++ b/CO5027/Styles/MainStyle.css
@@ -17,13 +17,38 @@ a.current {
   background-color: #333;
 }
 p {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
+  padding-left: 10px;
 }
 h1 {
-  margin-top: 10px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+  padding-left: 15px;
 }
 h2 {
-  margin-top: 5px;
+  margin-top: 12px;
+  margin-bottom: 10px;
+  padding-left: 15px;
+}
+h3 {
+  margin-top: 8px;
+  margin-bottom: 10px;
+  padding-left: 5px;
+}
+textarea,
+input {
+  font-family: 'Roboto', Helvetica, Airel, sans-serif;
+  transition: background-color linear 0.15s;
+  padding: 5px;
+  display: block;
+  width: 100%;
+}
+textarea:focus,
+input:focus {
+  background-color: #fafafa;
+}
+textarea {
+  height: 250px;
 }
 header {
   background-color: #222;
@@ -36,12 +61,14 @@ header a {
 }
 header a img {
   vertical-align: middle;
+  padding: 10px;
 }
 header a h1 {
   vertical-align: middle;
   color: #fff;
   display: inline;
   padding-top: 15px;
+  padding-left: 0;
 }
 header nav.main ul {
   display: inline-block;
@@ -59,16 +86,23 @@ header nav.main ul li a:hover {
   background-color: #333;
 }
 .photos {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .photos .item {
   margin: 5px;
   flex-grow: 1;
-  flex-basis: 320px;
+  flex-basis: 300px;
 }
 .photos .item figure {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
   display: flex;
   display: block;
   position: relative;
@@ -96,12 +130,22 @@ header nav.main ul li a:hover {
   bottom: 0;
 }
 .photos .item figure figcaption span {
-  padding-right: 32px;
+  padding-right: 35px;
   float: right;
 }
 .photos .item figure:hover figcaption {
   opacity: 1;
   left: 0;
+}
+section div {
+  margin: 20px;
+  margin-bottom: 30px;
+}
+.columns.two {
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
 }
 footer {
   background-color: #222;
@@ -123,8 +167,8 @@ footer nav.validation {
   background-color: #2f2f2f;
 }
 footer nav.validation h3 {
-  padding-top: 5px;
-  padding-bottom: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
   font-size: 90%;
 }
 footer nav.validation li {
@@ -160,15 +204,11 @@ footer nav.validation li a:hover {
     padding: 12px 20px;
   }
 }
-@media (min-width: 430px) {
-  .photos {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-}
 @media (min-width: 500px) {
   footer {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
     justify-content: space-between;
   }
@@ -184,11 +224,16 @@ footer nav.validation li a:hover {
     display: inline-block;
   }
 }
-@media (min-width: 610px) {
+@media (min-width: 710px) {
   header nav.main {
     display: inline-block;
   }
   header nav.main ul {
     text-align: right;
+  }
+  .columns.two {
+    flex-direction: row;
+    flex-grow: 1;
+    flex-basis: 600px;
   }
 }
