--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -33,6 +33,13 @@
     column-count: @noOfColumns;
 }
 
+.displayFlex() {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+
 
 // Reset
 * {
@@ -63,15 +70,43 @@ a {
 }
 
 p {
-    margin-bottom: 5px;
+    margin-bottom: 10px;
+    padding-left: 10px;
 }
 
 h1 {
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+    padding-left: 15px;
 }
 
 h2 {
-    margin-top: 5px;
+    margin-top: 12px;
+    margin-bottom: 10px;
+    padding-left: 15px;
+}
+
+h3 {
+    margin-top: 8px;
+    margin-bottom: 10px;
+    padding-left: 5px;
+}
+
+textarea,
+input {
+    font-family: @fontFamily;
+    transition: background-color linear 0.15s;
+    padding: 5px;
+    display: block;
+    width: 100%;
+
+    &:focus {
+        background-color: #fafafa;
+    }
+}
+
+textarea {
+    height: 250px;
 }
 
 
@@ -90,6 +125,7 @@ header {
 
         img {
             vertical-align: middle;
+            padding: 10px;
         }
 
         h1 {
@@ -97,6 +133,7 @@ header {
             color: @logoFontColor;
             display: inline;
             padding-top: 15px;
+            padding-left: 0;
         }
     }
     // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -126,18 +163,19 @@ header {
 // Body
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 .photos {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    .displayFlex;
+    justify-content: center;
+    flex-direction: row;
+    flex-wrap: wrap;
 
     .item {
         margin: 5px;
         flex-grow: 1;
         //flex-shrink: 0;
-        flex-basis: 320px;
+        flex-basis: 300px;
 
         figure {
-            display: flex;
+            .displayFlex;
             display: block;
             position: relative;
             overflow: hidden;
@@ -158,7 +196,7 @@ header {
                 bottom: 0;
 
                 span {
-                    padding-right: 32px;
+                    padding-right: 35px;
                     float: right;
                 }
             }
@@ -170,6 +208,21 @@ header {
         }
     }
 }
+
+
+section div {
+    margin: 20px;
+    margin-bottom: 30px;
+}
+
+.columns.two {
+    width: 100%;
+    display: inline-flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Footer
@@ -197,8 +250,8 @@ footer {
         background-color: lighten(@footerBackgroundColor, 5%);
 
         h3 {
-            padding-top: 5px;
-            padding-bottom: 5px;
+            margin-top: 5px;
+            margin-bottom: 5px;
             font-size: 90%;
         }
 
@@ -256,18 +309,10 @@ footer {
     }
 }
 
-@media (min-width: 430px) {
-    .photos {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-}
-
 // respond footer onto single line
 @media (min-width: 500px) {
     footer {
-        display: flex;
+        .displayFlex;
         justify-content: space-between;
 
         .copyright {
@@ -285,12 +330,18 @@ footer {
     }
 }
 
-@media (min-width: 610px) {
+@media (min-width: 710px) {
     header nav.main {
         display: inline-block;
 
         ul {
             text-align: right;
         }
+    }
+
+    .columns.two {
+        flex-direction: row;
+        flex-grow: 1;
+        flex-basis: 600px;
     }
 }
