Adjusted: minor adjustments to content of pages | Improved: styling for contacts page

--- a/CO5027/Styles/MainStyle.css
+++ b/CO5027/Styles/MainStyle.css
@@ -35,6 +35,10 @@ h3 {
   margin-bottom: 10px;
   padding-left: 5px;
 }
+img {
+  max-width: 100%;
+  height: auto;
+}
 textarea,
 input {
   font-family: 'Roboto', Helvetica, Airel, sans-serif;
@@ -42,6 +46,7 @@ input {
   padding: 5px;
   display: block;
   width: 100%;
+  font-size: 1.05em;
 }
 textarea:focus,
 input:focus {
@@ -93,6 +98,7 @@ header nav.main ul li a:hover {
   justify-content: center;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 100%;
 }
 .photos .item {
   margin: 5px;
@@ -138,14 +144,39 @@ header nav.main ul li a:hover {
   left: 0;
 }
 section div {
-  margin: 20px;
-  margin-bottom: 30px;
+  margin: 0 20px 30px 20px;
 }
-.columns.two {
+.page {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 900px;
+}
+.page div {
+  margin: 0 20px 30px 20px;
+  max-width: 900px;
+}
+.columns {
   width: 100%;
-  display: inline-flex;
+  display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.columns .map {
+  flex-grow: 1;
+}
+.columns .map img {
+  display: block;
+  max-width: 100%;
+}
+.contact-details p span {
+  margin-top: 5px;
+  padding: 15px;
+  display: block;
+  background: #f5f5f5;
+  font-size: 1.05em;
+  line-height: 1.4;
+  border-left: 5px solid #626262;
 }
 footer {
   background-color: #222;
@@ -203,6 +234,10 @@ footer nav.validation li a:hover {
     display: block;
     padding: 12px 20px;
   }
+  textarea,
+  input {
+    min-width: 320px;
+  }
 }
 @media (min-width: 500px) {
   footer {
@@ -223,6 +258,10 @@ footer nav.validation li a:hover {
   footer nav.validation ul {
     display: inline-block;
   }
+  textarea,
+  input {
+    min-width: 400px;
+  }
 }
 @media (min-width: 710px) {
   header nav.main {
@@ -235,5 +274,6 @@ footer nav.validation li a:hover {
     flex-direction: row;
     flex-grow: 1;
     flex-basis: 600px;
+    align-items: stretch;
   }
 }
