--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -194,6 +194,7 @@ header {
             }
 
             figcaption {
+                transition: opacity ease-out 0.12s;
                 position: absolute;
                 width: 100%;
                 .backgroundGradient(rgba(0,0,0,0),rgba(0,0,0,0.75));
