--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -6,11 +6,11 @@
 
 @headerBackgroundColor: #222;
 @headerFontColor: #fff;
-@headerFontFamily: 'Roboto', Helvetica, Airel, sans-serif;
+@headerFontFamily: 'Roboto', Helvetica, Arial, sans-serif;
 @headerLinkColor: @headerFontColor;
 
 @linkColor: #08f;
-@fontFamily: 'Roboto', Helvetica, Airel, sans-serif;
+@fontFamily: 'Roboto', Helvetica, Arial, sans-serif;
 
 @footerBackgroundColor: @headerBackgroundColor;
 @footerFontColor: @headerFontColor;
@@ -254,7 +254,6 @@ section > div {
 
         img, div {
             display: block;
-            max-width: 100%;
         }
         #map {
             height:350px;
