--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -22,8 +22,9 @@
                     <ul>
                         <li><a href="~/" runat="server">Browse</a></li>
                         <li><a href="checkout.aspx" runat="server">Checkout</a></li>
-                        <li><a href="~/user/" runat="server">Login</a></li>
+                        <li><a href="~/user/" runat="server"><%= (System.Web.HttpContext.Current.User.Identity.IsAuthenticated == true) ? "My Account" : "Login" %></a></li>
                         <li><a href="~/contact.aspx" runat="server">Contact</a></li>
+                        <%= (System.Web.HttpContext.Current.User.Identity.IsAuthenticated == true) ? "<li><a href=\"" + ResolveUrl("~/login.aspx?action=logout") + "\" runat=\"server\">Logout</a></li>" : "" %>
                     </ul>
                 </nav>
             </header>
