Added user-visible orders with download links for photos to 'My Account' page

--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -240,7 +240,7 @@ section > div {
     margin: 15px 5px;
 
     span {
-        color:red;
+        color: red;
     }
 }
 
@@ -257,9 +257,10 @@ section > div {
         img, div {
             display: block;
         }
+
         #map {
-            height:350px;
-            width:900px;
+            height: 350px;
+            width: 900px;
         }
     }
 }
@@ -283,6 +284,27 @@ section > div {
 
     ul {
         list-style: none;
+    }
+}
+
+.order {
+    padding: 5px;
+    margin-bottom: 10px;
+    margin-top: 2rem;
+
+    p {
+        display: inline-block;
+        padding: 5px;
+    }
+
+    .product {
+        padding: 0.8rem;
+        background-color: @paleGrey;
+
+        p {
+            padding: 5px;
+            margin-right: 1rem;
+        }
     }
 }
 
