--- a/CO5027/Styles/MainStyle.css
+++ b/CO5027/Styles/MainStyle.css
@@ -197,6 +197,23 @@ section > div {
 .products ul {
   list-style: none;
 }
+.order {
+  padding: 5px;
+  margin-bottom: 10px;
+  margin-top: 2rem;
+}
+.order p {
+  display: inline-block;
+  padding: 5px;
+}
+.order .product {
+  padding: 0.8rem;
+  background-color: #f4f4f4;
+}
+.order .product p {
+  padding: 5px;
+  margin-right: 1rem;
+}
 footer {
   background-color: #222;
   color: #fff;
