--- a/CO5027/Styles/MainStyle.less
+++ b/CO5027/Styles/MainStyle.less
@@ -117,6 +117,10 @@ textarea {
     height: 250px;
 }
 
+.warning {
+    color: red;
+}
+
 
 
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -289,12 +293,16 @@ section > div {
 
 .order {
     padding: 5px;
-    margin-bottom: 10px;
-    margin-top: 2rem;
+    margin-top: 0.4rem;
+    margin-bottom: 1.5rem;
 
     p {
         display: inline-block;
         padding: 5px;
+    }
+
+    input {
+        display: inline-block;
     }
 
     .product {
@@ -304,6 +312,7 @@ section > div {
         p {
             padding: 5px;
             margin-right: 1rem;
+            margin-bottom:0;
         }
     }
 }
@@ -433,6 +442,10 @@ footer {
         ul {
             text-align: right;
         }
+    }
+    textarea,
+    input {
+        max-width: 100%;
     }
 }
 
