--- a/CO5027/Site.Master
+++ b/CO5027/Site.Master
@@ -23,6 +23,7 @@
                         <li><a href="~/" runat="server">Browse</a></li>
                         <li><a href="checkout.aspx" runat="server">Basket<asp:Literal ID="litBasketQty" runat="server"></asp:Literal></a></li>
                         <li><a href="~/user/" runat="server"><%= (System.Web.HttpContext.Current.User.Identity.IsAuthenticated == true) ? "My Account" : "Login" %></a></li>
+                        <%= (System.Web.HttpContext.Current.User.IsInRole("Admin") == true) ? "<li><a href=\"" + ResolveUrl("~/admin") + "\">Admin</a></li>" : "" %>
                         <li><a href="~/contact.aspx" runat="server">Contact</a></li>
                         <%= (System.Web.HttpContext.Current.User.Identity.IsAuthenticated == true) ? "<li><a href=\"" + ResolveUrl("~/login.aspx?action=logout") + "\">Logout</a></li>" : "" %>
                     </ul>
